--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -49,8 +49,8 @@ jobs:
           vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  doc-build:
-    name: Create wheelhouse and documentation
+  gen-stubs:
+    name: Generate Mechanical stubs
     needs: [style, doc-style]
     runs-on: ${{ matrix.os }}
     container:
@@ -60,9 +60,10 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         versions: [
+          { image: '23.2.0', version: '232' },
           { image: '24.1.0', version: '241' }
         ]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10']
     steps:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
@@ -79,23 +80,25 @@ jobs:
           apt install python${{ matrix.python-version }} -y
           ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
           apt install python${{ matrix.python-version }}-venv -y
+          apt install -y lsb-release mono-complete make git zip
+
           python -m ensurepip --default-pip
           pip install --upgrade pip
           python --version
           pip --version
 
-          apt update
-          apt install -y lsb-release
-          apt install -y mono-complete
-          apt install -y make
-          apt-get install -y zip
+          pip install -e .[doc]
           pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
+      - name: Generate the mechanical stub files
+        env:
+          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
+        run: |
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
-          # Install library with -v to ensure stub_generator content is displayed
-          pip install . 2> results.txt
+          python stub_generator/create_files.py > results.txt
         continue-on-error: True
 
       - name: Check stubs were generated
@@ -112,231 +115,224 @@ jobs:
             exit 1
           fi
 
-      - name: Retrieve Mechanial version
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          pip install -e .
-          echo "MECHANICAL_VERSION=$(python -c 'from ${{ env.PACKAGE_NAMESPACE }}.v${{ matrix.versions.version }} import __version__; print(__version__)')" >> $GITHUB_ENV
-          echo "Mechanical version is: $(python -c "from ${{ env.PACKAGE_NAMESPACE }}.v${{ matrix.versions.version }} import __version__; print(__version__)")"
-
-      - name: Install build and twine, and build dist artifacts
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          # This and the next step are the same as the build-library action
-          python -m pip install build twine
-          python -m build
-          python -m twine check dist/*
-        continue-on-error: True
-
-      - name: Upload distribution artifacts to GitHub artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.PACKAGE_NAME }}-artifacts-v${{ matrix.versions.version }}
-          path: dist/
-          retention-days: 7
-
-      - name: Install package and create wheelhouse
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          python -m pip install -e .
-          python -m pip install importlib-metadata
-          python -m pip wheel . -w wheelhouse 2> wheel_results.txt
-        continue-on-error: True
-
-      - name: Compress the wheelhouse
-        uses: vimtor/action-zip@v1.1
-        with:
-          files: wheelhouse
-          dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
-
-      - name: Upload the wheelhouse files
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
-          path: wheelhouse/*
-          retention-days: 7
-
-      - name: Install documentation dependencies
-        run: |
-          apt-get install git -y
-          pip install -e .[doc]
-
-      - name: Create markdown documentation
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          sphinx-build -M markdown doc/source doc/_build
-
-      - name: Create Sphinx documentation
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          make -C doc html
-
-      - name: Clean ID in first row
-        run: |
-          python scripts/01-clean-id.py
-
-      - name: Clean empty rows
-        run: |
-          python scripts/02-clean-empty-row.py
-
-      - name: Create table of contents
-        run: |
-          python scripts/03-create-toc-from-html-mechanical.py
-
-      - name: Add header to tables
-        run: |
-          python scripts/04-add-header-to-tables.py
-
-      - name: Remove links in heading
-        run: |
-          python scripts/05-remove-link-in-heading.py
-
-      - name: Upload to GitHub Artifacts
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        uses: actions/upload-artifact@v4
-        with:
-          name: toc-file-${{ matrix.versions.image }}
-          path: output/
-
-      - name: Upload markdown documentation
-        uses: actions/upload-artifact@v3
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        with:
-          name: documentation-md-${{ matrix.versions.image }}
-          path: doc/_build/markdown
-          retention-days: 7
-
-      - name: Upload Sphinx HTML documentation
-        uses: actions/upload-artifact@v3
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        with:
-          name: documentation-html-${{ matrix.versions.image }}
-          path: doc/_build/html
-          retention-days: 7
-
-      - name: Generate needed files for deploying pages
-        run: |
-          touch .nojekyll CNAME
-          echo ${{ env.DOCUMENTATION_CNAME }} >> CNAME
-
-  release-pypi-private:
-    name: "Release to the private PyPI repository"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  init-file-version:
+    name: Generate __init__ file and get version
+    needs: [style, doc-style]
     runs-on: ubuntu-latest
-    needs: [doc-build]
     steps:
-      - name: "Release to the private PyPI repository"
-        uses: ansys/actions/release-pypi-private@v4
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          twine-username: "__token__"
-          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
+      - name: Create __init__.py
+        shell: python
+        run: |
+          print(os.getcwd())
+          outdir = base_dir / "src" / "ansys" / "mechanical" / "stubs"
+  
+      # - name: Retrieve Mechanial version
+      #   run: |
+      #     pip install -e .
+      #     echo "MECHANICAL_VERSION=$(python -c 'from ${{ env.PACKAGE_NAMESPACE }} import __version__; print(__version__)')" >> $GITHUB_ENV
+      #     echo "Mechanical version is: $(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print(__version__)")"
 
-  # release-pypi-public:
-  #   name: "Release to the public PyPI repository"
+
+  # smoke-tests:
+  #   name: Build and Smoke tests
+  #   runs-on: ${{ matrix.os }}
+  #   needs: [style]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: [ubuntu-latest, windows-latest, macos-latest]
+  #       python-version: ['3.9', '3.10', '3.11', '3.12']
+  #       should-release:
+  #         - ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags') }}
+  #       exclude:
+  #         - should-release: false
+  #           os: macos-latest
+  #   steps:
+  #     - name: Build wheelhouse and perform smoke test
+  #       uses: ansys/actions/build-wheelhouse@v6
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         operating-system: ${{ matrix.os }}
+  #         python-version: ${{ matrix.python-version }}
+
+  # doc-build-markdown:
+  #   name: Create markdown documentation
+  #   needs: [style, doc-style]
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, windows-latest]
+  #       python-version: ['3.10', '3.11', '3.12']
+  #   steps:
+  #     - name: Generate markdown documentation 
+  #       run: |
+  #         sphinx-build -M markdown doc/source doc/_build
+
+  #     - name: Upload markdown documentation
+  #       uses: actions/upload-artifact@v3
+  #       if: matrix.python-version == env.MAIN_PYTHON_VERSION
+  #       with:
+  #         name: documentation-md
+  #         path: doc/_build/markdown
+  #         retention-days: 7
+
+  #     - name: Upload Sphinx HTML documentation
+  #       uses: actions/upload-artifact@v3
+  #       if: matrix.python-version == env.MAIN_PYTHON_VERSION
+  #       with:
+  #         name: documentation-html
+  #         path: doc/_build/html
+  #         retention-days: 7
+
+  # doc-build-html:
+  #   name: Create html documentation
+  #   needs: [style, doc-style]
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, windows-latest]
+  #       python-version: ['3.10', '3.11', '3.12']
+  #   steps:
+  #     - name: Create Sphinx documentation
+  #       run: |
+  #         make -C doc html
+ 
+  # clean-documentation:
+  #   name: Clean documentation
+  #   needs: [doc-build-markdown, doc-build-html]
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #       python-version: ['3.10']
+  #   steps:
+  #     - name: Clean ID in first row
+  #       run: |
+  #         python scripts/01-clean-id.py
+
+  #     - name: Clean empty rows
+  #       run: |
+  #         python scripts/02-clean-empty-row.py
+
+  #     - name: Create table of contents
+  #       run: |
+  #         python scripts/03-create-toc-from-html-mechanical.py
+
+  #     - name: Add header to tables
+  #       run: |
+  #         python scripts/04-add-header-to-tables.py
+
+  #     - name: Remove links in heading
+  #       run: |
+  #         python scripts/05-remove-link-in-heading.py
+
+  #     - name: Upload to GitHub Artifacts
+  #       if: matrix.python-version == env.MAIN_PYTHON_VERSION
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: toc-files
+  #         path: output/
+
+  # release-pypi-private:
+  #   name: "Release to the private PyPI repository"
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   runs-on: ubuntu-latest
+  #   needs: [clean-documentation]
+  #   steps:
+  #     - name: "Release to the private PyPI repository"
+  #       uses: ansys/actions/release-pypi-private@v4
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         twine-username: "__token__"
+  #         twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
+
+  # # release-pypi-public:
+  # #   name: "Release to the public PyPI repository"
+  # #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  # #   runs-on: ubuntu-latest
+  # #   needs: [release-pypi-private]
+  # #   steps:
+  # #     - name: "Release to the public PyPI repository"
+  # #       uses: ansys/actions/release-pypi-public@v4
+  # #       with:
+  # #         library-name: ${{ env.PACKAGE_NAME }}
+  # #         twine-username: "__token__"
+  # #         twine-token: ${{ secrets.PYPI_TOKEN }}
+
+  # release-github:
+  #   name: "Release to GitHub"
   #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
   #   runs-on: ubuntu-latest
   #   needs: [release-pypi-private]
   #   steps:
-  #     - name: "Release to the public PyPI repository"
-  #       uses: ansys/actions/release-pypi-public@v4
+  #     - name: "Release to GitHub"
+  #       uses: ansys/actions/release-github@v4
   #       with:
   #         library-name: ${{ env.PACKAGE_NAME }}
-  #         twine-username: "__token__"
-  #         twine-token: ${{ secrets.PYPI_TOKEN }}
 
-  release-github:
-    name: "Release to GitHub"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    runs-on: ubuntu-latest
-    needs: [release-pypi-private]
-    steps:
-      - name: "Release to GitHub"
-        uses: ansys/actions/release-github@v4
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
+  # doc-deploy-dev:
+  #   name: "Deploy development documentation"
+  #   if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   needs: [clean-documentation]
+  #   steps:
+  #     - name: "Deploy development documentation"
+  #       uses: ansys/actions/doc-deploy-dev@v4
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         doc-artifact-name: 'documentation-html'
 
-  doc-deploy-dev:
-    name: "Deploy development documentation"
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: doc-build
-    strategy:
-      matrix:
-        mechanical-version: ['24.1.0']
-    steps:
-      - name: "Deploy development documentation"
-        uses: ansys/actions/doc-deploy-dev@v4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          doc-artifact-name: 'documentation-html-${{ matrix.mechanical-version }}'
+  # doc-index-dev:
+  #   name: "Deploy dev index docs"
+  #   if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   needs: [doc-deploy-dev]
+  #   steps:
+  #     - name: "Deploy the latest documentation index"
+  #       uses: ansys/actions/doc-deploy-index@v6
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}/version/dev
+  #         index-name: pymechanical-stubs-vdev
+  #         host-url: ${{ env.MEILISEARCH_HOST_URL }}
+  #         api-key: ${{ env.MEILISEARCH_API_KEY }}
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  doc-index-dev:
-    name: "Deploy dev index docs"
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: doc-deploy-dev
-    steps:
-      - name: "Deploy the latest documentation index"
-        uses: ansys/actions/doc-deploy-index@v6
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}/version/dev
-          index-name: pymechanical-stubs-vdev
-          host-url: ${{ env.MEILISEARCH_HOST_URL }}
-          api-key: ${{ env.MEILISEARCH_API_KEY }}
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # doc-deploy-stable:
+  #   name: "Deploy stable documentation"
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   runs-on: ubuntu-latest
+  #   needs: [release-pypi-private, release-github]
+  #   strategy:
+  #     matrix:
+  #       mechanical-version: ['24.1.0']
+  #   steps:
+  #     - name: "Deploy stable documentation"
+  #       uses: ansys/actions/doc-deploy-stable@v4
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         doc-artifact-name: 'documentation-html'
 
-  doc-deploy-stable:
-    name: "Deploy stable documentation"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    runs-on: ubuntu-latest
-    needs: [release-pypi-private, release-github]
-    strategy:
-      matrix:
-        mechanical-version: ['24.1.0']
-    steps:
-      - name: "Deploy stable documentation"
-        uses: ansys/actions/doc-deploy-stable@v4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          doc-artifact-name: 'documentation-html-${{ matrix.mechanical-version }}'
+  # doc-index-stable:
+  #   name: "Index the documentation and scrap using PyMeilisearch"
+  #   if: github.event_name == 'push'
+  #   runs-on: ubuntu-latest
+  #   needs: [doc-deploy-stable]
+  #   steps:
+  #     - name: Scrape the stable documentation to PyMeilisearch
+  #       run: |
+  #         VERSION=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('.'.join(__version__.split('.')[:2]))")
+  #         VERSION_MEILI=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('-'.join(__version__.split('.')[:2]))")
+  #         echo "Calculated VERSION: $VERSION"
+  #         echo "Calculated VERSION_MEILI: $VERSION_MEILI"
 
-  doc-index-stable:
-    name: "Index the documentation and scrap using PyMeilisearch"
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-    needs: doc-deploy-stable
-    strategy:
-      matrix:
-        versions: [
-          { image: '24.1.0', version: '241' }
-        ]
-    steps:
-      - name: Scrape the stable documentation to PyMeilisearch
-        run: |
-          VERSION=$(python -c "from ${{ env.PACKAGE_NAMESPACE }}.v${{ matrix.versions.version }} import __version__; print('.'.join(__version__.split('.')[:2]))")
-          VERSION_MEILI=$(python -c "from ${{ env.PACKAGE_NAMESPACE }}.v${{ matrix.versions.version }} import __version__; print('-'.join(__version__.split('.')[:2]))")
-          echo "Calculated VERSION: $VERSION"
-          echo "Calculated VERSION_MEILI: $VERSION_MEILI"
-
-      - name: "Deploy the latest documentation index"
-        uses: ansys/actions/doc-deploy-index@v4.1
-        with:
-          cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
-          index-name: "pymechanical-stubs-v$VERSION_MEILI"
-          host-url: ${{ env.MEILISEARCH_HOST_URL }}
-          api-key: ${{ secrets.MEILISEARCH_API_KEY }}
-          doc-artifact-name: 'documentation-html-${{ matrix.versions.image }}'
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  #     - name: "Deploy the latest documentation index"
+  #       uses: ansys/actions/doc-deploy-index@v4.1
+  #       with:
+  #         cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
+  #         index-name: "pymechanical-stubs-v$VERSION_MEILI"
+  #         host-url: ${{ env.MEILISEARCH_HOST_URL }}
+  #         api-key: ${{ secrets.MEILISEARCH_API_KEY }}
+  #         doc-artifact-name: 'documentation-html'
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
