--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -49,37 +49,23 @@ jobs:
           vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  gen-stubs:
-    name: Generate Mechanical stubs
+  checkout-repo:
+    name: Checkout repository
     needs: [style, doc-style]
-    runs-on: ${{ matrix.os }}
-    container:
-      image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
-      options: --entrypoint /bin/bash
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        versions: [
-          { image: '23.2.0', version: '232' },
-          { image: '24.1.0', version: '241' }
-        ]
-        python-version: ['3.10']
+    runs-on: ubuntu-latest
     steps:
-      - name: Install Git and checkout project
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Install dependencies
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
         run: |
           apt update
           apt install --reinstall ca-certificates
           apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa -y
-          apt install python${{ matrix.python-version }} -y
-          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
-          apt install python${{ matrix.python-version }}-venv -y
+          apt install python${{ env.MAIN_PYTHON_VERSION }} -y
+          ln -s /usr/bin/python${{ env.MAIN_PYTHON_VERSION }} /usr/bin/python
+          apt install python${{ env.MAIN_PYTHON_VERSION }}-venv -y
           apt install -y lsb-release mono-complete make git zip
 
           python -m ensurepip --default-pip
@@ -93,6 +79,21 @@ jobs:
           pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
+  gen-stubs:
+    name: Generate Mechanical stubs
+    needs: [checkout-repo]
+    runs-on: ${{ matrix.os }}
+    container:
+      image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
+      options: --entrypoint /bin/bash
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        versions: [
+          { image: '23.2.0', version: '232' },
+          { image: '24.1.0', version: '241' }
+        ]
+    steps:
       - name: Generate the mechanical stub files
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
@@ -114,8 +115,6 @@ jobs:
             echo "There was an issue creating the mechanical stubs"
             exit 1
           fi
-
-          pwd
 
   init-file-version:
     name: Generate __init__ file and get version
