--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -60,13 +60,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          apt install --reinstall ca-certificates
-          apt install software-properties-common -y
+          sudo apt install --reinstall ca-certificates
+          sudo apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa -y
-          apt install python${{ env.MAIN_PYTHON_VERSION }} -y
+          sudo apt install python${{ env.MAIN_PYTHON_VERSION }} -y
           ln -s /usr/bin/python${{ env.MAIN_PYTHON_VERSION }} /usr/bin/python
-          apt install python${{ env.MAIN_PYTHON_VERSION }}-venv -y
-          apt install -y lsb-release mono-complete make git zip
+          sudo apt install python${{ env.MAIN_PYTHON_VERSION }}-venv -y
+          sudo apt install -y lsb-release mono-complete make git zip
 
           python -m ensurepip --default-pip
           pip install --upgrade pip
