--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -64,7 +64,7 @@ jobs:
           sudo apt install software-properties-common -y
           sudo add-apt-repository ppa:deadsnakes/ppa -y
           sudo apt install python${{ env.MAIN_PYTHON_VERSION }} -y
-          ln -fs /usr/bin/python${{ env.MAIN_PYTHON_VERSION }} /usr/bin/python
+          sudo ln -fs /usr/bin/python${{ env.MAIN_PYTHON_VERSION }} /usr/bin/python
           sudo apt install python${{ env.MAIN_PYTHON_VERSION }}-venv -y
           sudo apt install -y lsb-release mono-complete make git zip
 
