--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -53,6 +53,9 @@ jobs:
     name: Checkout repository
     needs: [style, doc-style]
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
+      options: --entrypoint /bin/bash
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -68,16 +71,16 @@ jobs:
           sudo apt install python${{ env.MAIN_PYTHON_VERSION }}-venv -y
           sudo apt install -y lsb-release mono-complete make git zip
 
-          python -m ensurepip --default-pip
-          pip install --upgrade pip
+          sudo python -m ensurepip --default-pip
+          sudo pip install --upgrade pip
           python --version
           pip --version
 
           mkdir -p src/ansys/mechanical/stubs
           touch src/ansys/mechanical/stubs/__init__.py
-          pip install -e .[doc]
-          pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
-          pip install --upgrade pip flit pytz tzdata ansys-pythonnet
+          sudo pip install -e .[doc]
+          sudo pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
+          sudo pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
   gen-stubs:
     name: Generate Mechanical stubs
