--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -130,7 +130,7 @@ jobs:
         if: matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
           name: v${{ matrix.versions.version }}-stubs
-          path: src/ansys/mechanical/stubs/v241
+          path: src/ansys/mechanical/stubs/v${{ matrix.versions.version }}
           retention-days: 7
 
   download-stubs:
@@ -144,14 +144,14 @@ jobs:
       - name: "Download the library artifacts from build-library step"
         uses: actions/download-artifact@v4
         with:
-          name: v${{ matrix.versions }}
-          path: v${{ matrix.versions }}-stubs
+          name: v${{ matrix.versions.version }}-stubs
+          path: v${{ matrix.versions }}
 
       - name: "Display the structure of downloaded files"
         shell: bash
         run: |
           pwd
-          ls -R
+          ls -l
 
   # init-file-version:
   #   name: Generate __init__ file and get version
