--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -144,7 +144,7 @@ jobs:
       - name: "Download the library artifacts from build-library step"
         uses: actions/download-artifact@v4
         with:
-          name: v${{ matrix.versions.version }}-stubs
+          name: v${{ matrix.versions }}-stubs
           path: v${{ matrix.versions }}
 
       - name: "Display the structure of downloaded files"
