--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -125,6 +125,81 @@ jobs:
           path: src/ansys/mechanical/stubs/v${{ matrix.versions.version }}
           retention-days: 7
 
+  wheelhouse-build:
+    name: Build wheelhouse
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.10", "3.11", "3.12"]
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: "Download the library artifacts from build-library step"
+      uses: actions/download-artifact@v4
+      with:
+        path: src/ansys/mechanical/stubs/
+
+    - name: Create __init__.py in src/ansys/mechanical/stubs
+      shell: python
+      run: |
+        import os
+
+        subfolders = [ f.name for f in os.scandir("src/ansys/mechanical/stubs/") if f.is_dir() ]
+
+        with open("src/ansys/mechanical/stubs/__init__.py", "w") as f:
+            f.write('''try:
+            import importlib.metadata as importlib_metadata
+        except ModuleNotFoundError:  # pragma: no cover
+            import importlib_metadata  # type: ignore
+
+        __version__ = importlib_metadata.version("ansys-mechanical-stubs")
+        """Patch version for the ansys-mechanical-stubs package."""\n\n''')
+
+            for folder in subfolders:
+                f.write(f"from .{folder} import *\n")
+                f.write('"""Mechanical installation version."""\n')
+
+    - name: Retrieve Mechanial version
+      run: |
+        pip install -e .
+        echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
+        echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
+
+    - name: Install build and twine, and build dist artifacts
+      run: |
+        # This and the next step are the same as the build-library action
+        python -m pip install build twine
+        python -m build
+        python -m twine check dist/*
+
+    - name: "Upload distribution artifacts to GitHub artifacts"
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.PACKAGE_NAME }}-artifacts
+        path: dist/
+        retention-days: 7
+
+    - name: Install package and create wheelhouse
+      run: |
+        python -m pip install -e .
+        python -m pip install importlib-metadata
+        python -m pip wheel . -w wheelhouse
+
+    - name: "Compress the wheelhouse"
+      uses: vimtor/action-zip@v1.1
+      with:
+        files: wheelhouse
+        dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
+
+    - name: "Upload the wheelhouse files"
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
+        path: wheelhouse/*
+        retention-days: 7
+
   doc-build:
     name: Make html and markdown documentation
     needs: [gen-stubs]
@@ -159,6 +234,7 @@ jobs:
 
             for folder in subfolders:
                 f.write(f"from .{folder} import *\n")
+                f.write('"""Mechanical installation version."""\n')
 
     - name: Install project & doc dependencies
       run: |
