--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -66,8 +66,8 @@ jobs:
         ]
         python-version: ['3.10'] #, '3.11', '3.12']
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       # - name: Install dependencies
       #   env:
@@ -121,6 +121,7 @@ jobs:
       - name: Make directories
         run: |
           mkdir -p ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
+          touch ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}/__init__.py
 
       - name: Upload v${{ matrix.mechanical.version }} stubs
         uses: actions/upload-artifact@v4
