--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -154,9 +154,9 @@ jobs:
 
         find . -name "v*-${{ matrix.python-version }}" -print0 |
         while IFS= read -r -d '' line; do
-          version_only=${d%%-*}
-          echo "Renaming folder from $d to $version_only"
-          mv "$d" "$version_only"
+          version_only=${line%%-*}
+          echo "Renaming folder from $line to $version_only"
+          mv "$line" "$version_only"
         done
 
         cd -
