--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -118,10 +118,10 @@ jobs:
       #       exit 1
       #     fi
 
-      # - name: Make directories
-      #   run: |
-      #     mkdir -p ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
-      #     touch ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}/__init__.py
+      - name: Make directories
+        run: |
+          mkdir -p ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
+          touch ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}/__init__.py
 
       - name: Upload v${{ matrix.mechanical.version }} stubs
         uses: actions/upload-artifact@v4
